[package]
name = "sag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest"] }
digest = "0.10.7"
rand_core = "0.6.4"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha2 = "0.10.8"
